--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-klenty",
   "version": "1.0.0",
   "description": "Klenty project",
-  "main": "index.js",
+  "default": "index.js",
   "scripts": {
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html"
